[package]
name = "render"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1
panic = "abort"



[dependencies]
rand = "0.8.4"
rand_chacha = "0.3.1"
itertools = "0.10.3"
image = "0.23.14"
num = "0.4.0"
rand_distr = {version = "0.4.3", features = ["std_math"]}
scoped_threadpool = "0.1.9"
rand_xoshiro = "0.6.0"
once_cell = "1.18.0"
clap = { version = "4.3.19", features = ["derive"] }
